--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <!-- 
         Oauth2 involves 4-5 handshakes:
-        1a. App generates oauth url (client ID, scope required, redirect url) to Google
+        1a. App generates authorization url (client ID, scope required, redirect url) to Google
         1b. Google asks for user login. Jump to step 2 if logged on
         
         2a. User submits username/ password to Google
@@ -25,12 +25,23 @@
         1. To automate the whole flow programmatically, there're 2 main barriers: authorization code and access token
         2. After app obtains access token, it can be renewed by refresh token, and direct access to the scoped data. There's existing API to do programmatically.
         3. However, authorization code involves browser and user intervention. There's no direct API available to do so, and not intended to do so. 
-           So we have to simulate the browser behavior. HtmlUnit is one of the choices. But it's highly subject to the DOM in the login page. 
-           If one day Google changes the DOM in the login page, it won't work.
-          
-        Reference:
-        https://sumeet70.wordpress.com/2013/03/04/google-oauth-and-junit/
-        
+           So we have to simulate the browser behavior. HtmlUnit is one of the choices. 
+           But it's highly subject to the DOM in the login page. If one day Google changes the DOM in the login page, it won't work.
+        4. example1 
+                i.  generates authorization url
+                ii. open browser manually
+                iii.paste the url
+                iv. logged-in if required, and grant permission
+                v.  past the authorization code
+                vi. generates access token
+        5. example2
+                i.  all automate                
+                reference: https://sumeet70.wordpress.com/2013/03/04/google-oauth-and-junit
+        6. example3                        
+                i.  open browser automatically
+                ii. logged-in if required, and grant permission
+                iii.generates access token                
+                reference: https://github.com/google/google-api-java-client-samples/blob/master/calendar-cmdline-sample/src/main/java/com/google/api/services/samples/calendar/cmdline/CalendarSample.java
         
         Environment:
         1.  Windows 7 64 bit (assume OS installed in C:\Windows)
@@ -80,7 +91,7 @@
         </dependency>
 
 
-        <!-- google api client -->
+        <!-- google api client, used by example1 -->
         <dependency>
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
@@ -88,7 +99,7 @@
         </dependency>
         
         
-        <!-- htmlunit --> 
+        <!-- htmlunit, used by example2 --> 
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
@@ -99,5 +110,21 @@
             <artifactId>htmlunit-core-js</artifactId>
             <version>2.16</version>
         </dependency>
+        
+        
+        <!-- google oauth client, used by example3 --> 
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-java6</artifactId>
+            <version>1.20.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-jetty</artifactId>
+            <version>1.20.0</version>
+        </dependency>
+        
+
     </dependencies>             
 </project>
